[package]
name = "gb-disass-rs"
version = "1.1.1"
edition = "2024"
authors = ["Eric Waren <eric@unix.guru>"]
readme = "README.md"
repository = "https://github.com/eric-waren/gb-disass-rs"
license = "MIT"
description = "Game Boy disassembler library in Rust, following RGBDS syntax"
keywords = ["gameboy", "assembly", "disassembler", "disassembly", "emulation"]
categories = ["emulators", "game-development", "games"]
